# Removable-Universal-Sketch

./: .gitignore  CMakeLists.txt  README.md
active_counter/: CMakeLists.txt
active_counter/include/active_counter/: generic_counter_turnstile.hpp  utils_active_counter.hpp
augmented_sketch/: CMakeLists.txt
augmented_sketch/include/augmented_sketch/: augmented_sketch.hpp  augmented_sketch_impl.hpp
filter/: CMakeLists.txt
filter/include/filter/: filter_base.hpp  filter_cuckoofilter.hpp
hash_cuckoo_for_filter/: CMakeLists.txt
hash_cuckoo_for_filter/include/cuckoofilter/: bucket_cuckoo_prefilter.hpp  bucket_cuckoo_prefilter_impl.hpp  counter_cuckoo_prefilter.hpp  counter_cuckoo_prefilter_impl.hpp  cuckoo_prefilter.hpp  cuckoo_prefilter_impl.hpp  global_var.hpp  pre_kicking_queue.hpp  singleTable_cuckoo_prefilter.hpp  singleTable_cuckoo_prefilter_impl.hpp
hash_cuckoo_for_filter/include/utils/: bitsutil.hpp  debug.hpp  hashutil.hpp  hashutil_impl.hpp  histutil.hpp  printutil.hpp  status.hpp  xxhash.h
lus/: CMakeLists.txt
lus/include/lus/: lus_sketch_with_cuckoo_prefilter.hpp  lus_sketch_with_cuckoo_prefilter_impl.hpp
sketch/: CMakeLists.txt
sketch/include/: sketch_utils.hpp
sketch/include/sketch/: Murmurhash.h  base_sketch.hpp  count_sketch.hpp  count_sketch_impl.hpp  sketchWithCuckooPrefilter.hpp  sketchWithPostFilter.hpp  sketchWithPreFilter.hpp
spdlog/: CMakeLists.txt
spdlog/include/spdlog/: async.h  async_logger-inl.h  async_logger.h  common-inl.h  common.h  formatter.h  fwd.h  logger-inl.h  logger.h  pattern_formatter-inl.h  pattern_formatter.h  spdlog-inl.h  spdlog.h  stopwatch.h  tweakme.h  version.h
spdlog/include/spdlog/cfg/: argv.h  env.h  helpers-inl.h  helpers.h
spdlog/include/spdlog/details/: backtracer-inl.h  backtracer.h  circular_q.h  console_globals.h  file_helper-inl.h  file_helper.h  fmt_helper.h  log_msg-inl.h  log_msg.h  log_msg_buffer-inl.h  log_msg_buffer.h  mpmc_blocking_q.h  null_mutex.h  os-inl.h  os.h  periodic_worker-inl.h  periodic_worker.h  registry-inl.h  registry.h  synchronous_factory.h  tcp_client-windows.h  tcp_client.h  thread_pool-inl.h  thread_pool.h  udp_client-windows.h  udp_client.h  windows_include.h
spdlog/include/spdlog/fmt/: bin_to_hex.h  chrono.h  compile.h  fmt.h  ostr.h  ranges.h  std.h  xchar.h
spdlog/include/spdlog/fmt/bundled/: args.h  chrono.h  color.h  compile.h  core.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h  std.h  xchar.h
spdlog/include/spdlog/sinks/: android_sink.h  ansicolor_sink-inl.h  ansicolor_sink.h  base_sink-inl.h  base_sink.h  basic_file_sink-inl.h  basic_file_sink.h  callback_sink.h  daily_file_sink.h  dist_sink.h  dup_filter_sink.h  hourly_file_sink.h  kafka_sink.h  mongo_sink.h  msvc_sink.h  null_sink.h  ostream_sink.h  qt_sinks.h  ringbuffer_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  sink-inl.h  sink.h  stdout_color_sinks-inl.h  stdout_color_sinks.h  stdout_sinks-inl.h  stdout_sinks.h  syslog_sink.h  systemd_sink.h  tcp_sink.h  udp_sink.h  win_eventlog_sink.h  wincolor_sink-inl.h  wincolor_sink.h
utils/: CMakeLists.txt
utils/include/: flow_definition.hpp  params.hpp  utils.hpp  xxhash.h
